# practice

./: pyproject.toml
src/exercises/config/: logging.py
src/exercises/core/: profiler.ipynb  two_sum.py
src/exercises/quant/: binomial_option_pricing.ipynb
src/exercises/tests/: test_two_sum.py
src/practice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
